[package]
name = "phln"
authors = [
    "The Team Arrow Racing Association firmware development team",
    "Liam Kinne <liam@kinne.io>"
]
description = "Driver for the Prohelion WaveSculptor Motor Driver."
categories = ["embedded", "no-std"]
documentation = "https://docs.rs/prohelion-drivers"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "phln"

[dependencies]
bitflags = "1.3.2"
bxcan = "0.7.0"
num-complex = { version = "0.4.3", default-features = false }
