[package]
name = "phln"
authors = [
    "The Team Arrow Racing Association firmware development team",
    "Liam Kinne <liam@kinne.io>"
]
description = "Embedded drivers for Prohelion devices."
categories = ["embedded", "no-std"]
documentation = "https://docs.rs/phln"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "phln"

[dependencies]
bitflags = "1.3.2"
bxcan = "0.6.0"
num-complex = { version = "0.4.3", default-features = false }
